--- a/app/views/home_page/home.html.erb
+++ b/app/views/home_page/home.html.erb
@@ -1,8 +1,8 @@
 <div class="theme-showcase" role="main">
 
   <div class="left-pic">
-    #replace pic
-    <img src="http://www.washingtonpost.com/wp-srv/special/health/why-roller-coasters-make-us-scream/images/rollercoasterBackground.jpg" width="550" height="325">
+    
+    <img src="http://www.https://unsplash.com/photos/uQs1802D0CQ" width="550" height="325">
   </div>
 
   <div class="right-info">
