--- a/app/views/home_page/home.html.erb
+++ b/app/views/home_page/home.html.erb
@@ -1,15 +1,15 @@
 <div class="theme-showcase" role="main">
 
   <div class="left-pic">
-    
-    <img src="http://www.https://unsplash.com/photos/uQs1802D0CQ" width="550" height="325">
+
+    <img src="https://unsplash.com/photos/uQs1802D0CQ" width="550" height="325">
   </div>
 
   <div class="right-info">
     <h1>Welcome to your online journal of recipes!</h1>
     <div class="center">
       <%= link_to "Sign In", signin_path, class: "btn btn-primary" %>
-      <%= link_to "Sign Up", new_user_path, class: "btn btn-primary" %>
+      <%= link_to "Sign Up", new_culinary_artist_path, class: "btn btn-primary" %>
     </div>
   </div>
 
