--- a/app/views/culinary_artists/_form.html.erb
+++ b/app/views/culinary_artists/_form.html.erb
@@ -1,10 +1,16 @@
-<%= form_for @culinary_artist, url: "/culinary_artists/login" do |f| %>
 
-  <div class="field"><%= f.label :culinary_artist_name, "Choose your name please" %><br>
-    <%= f.collection_select(:id, @culinary_artists, :id, :culinary_artist_name) %>
+<%= form_for @culinary_artist, url: "/culinary_artist/register" do |f| %>
+  <div class="form-group">
+    <%= f.label :name, "Enter your name" %><br>
+    <%= f.text_field :culinary_artist_name, class: "form-control" %>
+  </div>
+
+  <div class="form-group">
+    <%= f.label :password, "Please enter your password" %><br>
+    <%= f.password_field :password, class: "form-control" %>
   </div>
 
   <div class="actions">
-    <%= f.submit "Sign In"  %>
+    <%= f.submit "Register", class: "btn btn-primary" %>
   </div>
 <% end %>
