--- a/app/views/culinary_artists/signin.html.erb
+++ b/app/views/culinary_artists/signin.html.erb
@@ -1,1 +1,10 @@
-<%= render 'form' %>
+<%= form_for @culinary_artist, url: "/culinary_artists/login" do |f| %>
+
+  <div class="field"><%= f.label :culinary_artist_name %><br>
+    <%= f.collection_select(:id, @culinary_artists, :id, :culinary_artist_name) %>
+  </div>
+
+  <div class="actions">
+    <%= f.submit "Sign In"  %>
+  </div>
+<% end %>
