--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -7,7 +7,7 @@
       qty: <%= ingredient.text_field :quantity %>
     </li>
     <% end %>
-    <%= link_to 'add ingredient', @recipe %>
+    <%= link_to 'add_ingredient', @recipe %>
   </ul>
   <%= f.submit %>
 <% end %>
