--- a/app/views/culinary_artists/edit.html.erb
+++ b/app/views/culinary_artists/edit.html.erb
@@ -1,7 +1,7 @@
+<h3> <%= link_to "Account Deletion", culinary_artist_path(current_user), method: :delete, data: { confirm: "Are you sure you'd like to delete this account?" } %> </h3>
+
 <h1> Edit Culinary Artist </h1>
 
 <%= render 'form' %>
 
 <%= link_to 'Show', @culinary_artist %>
-
-<%= link_to 'Back', culinary_artists_path %>
