--- a/app/views/culinary_artists/show.html.erb
+++ b/app/views/culinary_artists/show.html.erb
@@ -1,7 +1,7 @@
-<h2>Your Recipes <h2>
+<h2>Welcome <%= @culinary_artist_name %>, here are your recipes: <h2>
 
 <div class="center">
 
-  <p><strong>Recipes:</strong> <%=@culinary_artist.recipes.all %></p>
+  <p><%=@culinary_artist.recipes.all %></p>
 
 </div>
