--- a/app/views/culinary_artists/_form.html.erb
+++ b/app/views/culinary_artists/_form.html.erb
@@ -1,4 +1,6 @@
-<%= form_for @culinary_artist do |f| %>
+<h1> New Culinary Artist </h1>
+
+<%= form_for culinary_artist do |f| %>
 
   <div class="form-group">
     <%= f.label :name, "Please create a username" %><br>
