--- a/app/views/home_page/home.html.erb
+++ b/app/views/home_page/home.html.erb
@@ -9,7 +9,7 @@
     <h1>Welcome to your online journal of recipes!</h1>
     <div class="center">
       <%= link_to "Sign In", signin_path, class: "btn btn-primary" %> |
-      <%= link_to "Join", join_path, class: "btn btn-primary" %>
+      <%= link_to "Join", new_culinary_artist_path, class: "btn btn-primary" %>
     </div>
   </div>
 
