--- a/app/views/culinary_artists/_form.html.erb
+++ b/app/views/culinary_artists/_form.html.erb
@@ -1,6 +1,6 @@
 <h1> New Culinary Artist </h1>
 
-<%= form_for @culinary_artist, url: '/culinary_artists' do |f| %>
+<%= form_for @culinary_artist, url: '/culinary_artists/new' do |f| %>
 
   <div class="form-group">
     <%= f.label :name, "Please create a username" %><br>
