--- a/app/views/culinary_artists/show.html.erb
+++ b/app/views/culinary_artists/show.html.erb
@@ -1,7 +1,5 @@
-<h2>Welcome <%= @culinary_artist_name %>, here are your recipes: <h2>
+<h3>Welcome, <%= @culinary_artist %> here are your recipes: </h3>
 
-<div class="center">
+#culinary_artist_recipe_path          #This is the path for a single culinary_artist recipe
 
-  <p><%=@culinary_artist.recipes.all %></p>
-
-</div>
+ #have to change routes to embed recipes
