--- a/app/views/culinary_artists/show.html.erb
+++ b/app/views/culinary_artists/show.html.erb
@@ -1,4 +1,4 @@
-<h3>Welcome, <%= @culinary_artist %> here are your recipes: </h3>
+<h3>Welcome, <%= @culinary_artist_id %> here are your recipes: </h3>
 
 #culinary_artist_recipe_path          #This is the path for a single culinary_artist recipe
 
