--- a/app/assets/stylesheets/culinary_artists.scss
+++ b/app/assets/stylesheets/culinary_artists.scss
@@ -1,3 +1,9 @@
 // Place all the styles related to the culinary_artists controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+body {
+  background-color: lightblue;
+  color: #333;
+  font-family: Sans-Serif;
+  line-height: 18px;
+}
