--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -1,5 +1,9 @@
+<% @recipes.each do |recipe|  %>
+
 <h2><%= recipe.title %></h2>
 
 <h3><%= link_to recipe.culinary_artist.name, culinary_artist_recipes_path(recipe.culinary_artist) %></h3>
 
 <p><%= recipe.description %></p>
+
+<% end %>
