--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,3 +1,23 @@
 
  @import "bootstrap-sprockets";
  @import "bootstrap";
+
+ body {
+    background-color: light-gray;
+    color: #333;
+    font-family: Helvetica;
+    line-height: 18px;
+  }
+
+ .content, .sidebar {
+     float: none;
+     width: 100%;
+   }
+
+   .sidebar {
+      background: #eee;
+      border: 1px solid #ccc;
+      float: right;
+      padding: 5px; /* 5px / 240px */
+      width: 30%; /* 240px / 800px */
+    }
