--- a/app/views/home_page/home.html.erb
+++ b/app/views/home_page/home.html.erb
@@ -5,13 +5,20 @@
     <%= image_tag "katie-smith-104748-unsplash.jpg", size: "500x500" %>
   </div>
 
-  <div class="right-info">
+  <div class="content">
     <h1>Welcome to your online journal of recipes!</h1>
+    <p>To cook, create and enjoy! Here at my recipe you can share your favorite
+      recipe with your family and friends. List the ingredients and the instructions
+      and have fun! Cooking can be hard but be proud of your accomplishments! </p>
+  </div>
+
+   <div class="sidebar">
+          <h3>Create. Cook. Enjoy.</h3>
+   </div>
+
     <div class="center">
       <%= link_to "Sign In", signin_path, class: "btn btn-primary" %> |
       <%= link_to "Log-in with Facebook", '/auth/facebook/callback', class: "btn btn-primary" %> |
       <%= link_to "Join", new_culinary_artist_path, class: "btn btn-primary" %>
     </div>
   </div>
-
-</div>
