--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,29 @@
   </head>
 
   <body>
-    <%= yield %>
+    <nav>
+      <% if @current_user %>
+          <a href="/recipes/new"> New Recipe </a>
+          <a href="/logout"> Log Out </a>
+          <a href="/recipes"> Index </a>
+      <% else %>
+          <a href="/sessions/create"> Join </a>
+          <a href="/culinary_artists/new"> Sign in </a>
+      <% end %>
+
+    </nav>
+    <div class="wrapper">
+
+          <%= yield %>
+
+          <footer class="branding">
+            <small>&copy; 2018 <strong>Recipes</strong></small>
+
+          </footer>
+
+        </div>
+
+        <script src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
+
   </body>
 </html>
