--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,8 +16,8 @@
           <a href="/logout"> Log Out </a>
           <a href="/recipes"> Index </a>
       <% else %>
-          <a href="/sessions/create"> Join </a>
-          <a href="/culinary_artists/new"> Sign in </a>
+          <%= link_to "Join", new_culinary_artist_path, class: "btn btn-primary" %> |
+          <%= link_to "Sign In", signin_path, class: "btn btn-primary" %>
       <% end %>
 
     </nav>
