--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -12,7 +12,7 @@
       <%= f.label :instructions %>
       <%= f.text_area :instructions %>
     </div>
-    <%= link_to 'add_ingredient', @recipe %> #doesn't go anywhere
+    <%= link_to 'add_ingredient', @recipe %> #goes back to recipes page
   </ul>
 
   <div class="actions">
