--- a/app/views/ingredients/new.html.erb
+++ b/app/views/ingredients/new.html.erb
@@ -9,6 +9,6 @@
   </ul>
 
   <div class="actions">
-  <%= f.submit "add ingredient", class: "btn btn-primary" %>
+  <%= f.submit "add ingredient", new_ingredient class: "btn btn-primary" %>
  </div>
 <% end %>
