update home page and ingredients controller

--- a/app/views/ingredients/_form.html.erb
+++ b/app/views/ingredients/_form.html.erb
@@ -8,6 +8,6 @@
   </ul>
 
   <div class="actions">
-  <%= f.submit "add ingredient", new_ingredient_path, class: "btn btn-primary" %>
+  <%= f.submit class: "btn btn-primary" %>
  </div>
 <% end %>
