--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,8 +16,7 @@
           <a href="/logout"> Log Out </a>
           <a href="/recipes"> Index </a>
       <% else %>
-          <%= link_to "Register", new_culinary_artist_path, class: "btn btn-primary" %> |
-          <%= link_to "Sign In", signin_path, class: "btn btn-primary" %>
+          <a href="/root_url %>">Home</a>
       <% end %>
 
     </nav>
