--- a/app/views/culinary_artists/_form.html.erb
+++ b/app/views/culinary_artists/_form.html.erb
@@ -4,22 +4,22 @@
 
   <div class="form-group">
     <%= f.label :name, "Please create a username" %><br>
-    <%= f.text_field :culinary_artist_name, class: "form-control" %>
+    <%= f.text_field :culinary_artist_name %>
   </div>
 
   <div class="form-group">
     <%= f.label :email, "Enter your email" %><br>
-    <%= f.text_field :email, class: "form-control" %>
+    <%= f.text_field :email %>
   </div>
 
   <div class="form-group">
     <%= f.label :password, "Please create a password" %><br>
-    <%= f.password_field :password, class: "form-control" %>
+    <%= f.password_field :password %>
   </div>
 
   <div class="form-group">
     <%= f.label :password_confirmation, "Confirm your password" %><br>
-    <%= f.password_field :password_confirmation, class: "form-control" %>
+    <%= f.password_field :password_confirmation %>
   </div>
 
   <div class="actions">
