--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -3,11 +3,31 @@
  @import "bootstrap";
 
  body {
-    background-color: light-gray;
+    background-color: #99C8CF;
     color: #333;
     font-family: Helvetica;
     line-height: 18px;
+    margin: 33px;
+    padding: 0;
+    background: transparent url("https://images.unsplash.com/photo-1498654896293-37aacf113fd9?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=c5d544bcd4ed70a95394185b2340f9ab&auto=format&fit=crop&w=1500&q=80") no-repeat center;
+    background-size: cover;
+    min-height: 100vh;
   }
+
+ div {
+    &.field, &.actions {
+      margin-bottom: 10px;
+    }
+  }
+
+  main {
+      text-align: center;
+      margin: 0 auto;
+      color: #fff;
+      max-width: 680px;
+      padding: 20px;
+      min-height: 565px;
+      }
 
  .content, .sidebar {
      float: none;
@@ -20,4 +40,26 @@
       float: right;
       padding: 5px; /* 5px / 240px */
       width: 30%; /* 240px / 800px */
+    }
+
+  .center {
+    background: #eee;
+    border: 3px solid #ccc;
+    float: center;
+    padding: 5px; /* 5px / 240px */
+    width: 30%; /* 240px / 800px */
+
+  }
+
+    a {
+      color: #8AE3E3;
+
+      &:visited {
+        color: #AD3434;
+      }
+
+      &:hover {
+        color: #AC81D6;
+        background-color: #000;
+      }
     }
