--- a/app/assets/stylesheets/culinary_artists.scss
+++ b/app/assets/stylesheets/culinary_artists.scss
@@ -6,4 +6,10 @@ body {
   color: #333;
   font-family: Sans-Serif;
   line-height: 18px;
+  margin: 33px;
 }
+
+div {
+  &.field, &.actions {
+    margin-bottom: 10px;
+  }
