--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>MyRecipes</title>
+    <title>My Recipes</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
@@ -10,22 +10,14 @@
   </head>
 
   <body>
-    <nav>
-      <% if @current_user %>
-          <a href="/recipes/new"> New Recipe </a>
-          <a href="/logout"> Log Out </a>
-          <a href="/recipes"> Index </a>
-      <% else %>
-        <%= link_to "Home", root_path, class: "btn btn-primary" %>
-      <% end %>
+    <%= render 'layouts/navigation' %>
 
-    </nav>
     <div class="wrapper">
 
           <%= yield %>
 
           <footer class="branding">
-            <small>&copy; 2018 <strong>Recipes</strong></small>
+            <small>&copy; 2018 <strong>My Recipes</strong></small>
 
           </footer>
 
