--- a/app/views/home_page/home.html.erb
+++ b/app/views/home_page/home.html.erb
@@ -1,17 +1,12 @@
 <div class="theme-showcase" role="main">
 
-  
+
 
   <div class="content">
     <h1>Welcome to your online journal of recipes!</h1>
     <p>To cook, create and enjoy! Here at my recipe you can share your favorite
-      recipe with your family and friends. List the ingredients and the instructions
-      and have fun! Cooking can be hard but be proud of your accomplishments! </p>
+      recipe with your family and friends. </p>
   </div>
-
-   <div class="sidebar">
-          <h3>Create. Cook. Enjoy.</h3>
-   </div>
 
     <div class="center">
       <%= link_to "Sign In", signin_path, class: "btn btn-primary" %> |
