--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -3,7 +3,7 @@
 <% if @culinary_artist %> # @culinary_artist has to change to current_user but it isn't working
 
 	<li class="nav-item"><%= link_to "Ingredients", ingredients_path, class: "nav-link" %></li>
-	<li class="nav-item"><%= link_to "Log Out", delete_path, method: :delete, class: "nav-link" %></li>
+	<li class="nav-item"><%= link_to "Log Out", logout_path, method: :destroy, class: "nav-link" %></li>
 
 <% else %>
 
