--- a/app/views/home_page/home.html.erb
+++ b/app/views/home_page/home.html.erb
@@ -5,7 +5,7 @@
   <div class="content">
     <h1>Welcome to your online journal of recipes!</h1>
     <p>To cook, create and enjoy! Here at my recipe you can share your favorite
-      recipe with your family and friends. </p>
+      recipes with your family and friends. </p>
   </div>
 
     <div class="center">
