--- a/app/views/ingredients/_form.html.erb
+++ b/app/views/ingredients/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for @ingredient do |f| %>
+<%= form_for (@ingredient) do |f| %>
   <ul>
     <%= f.fields_for :ingredients do |ingredient| %>
     <li>
