--- a/app/views/ingredients/index.html.erb
+++ b/app/views/ingredients/index.html.erb
@@ -1,10 +1,17 @@
 <h2>Ingredients List </h2>
 
 <table>
+  <tr>
+    <th>Name</th>
+    <th></th>
+    <th></th>
+    <th></th>
+  </tr>
+
   <% @ingredients.each do |ingredient| %>
   <tr>
     <td><%= ingredient.name %></td>
-    <td><%= link_to 'Show', ingredient %></td>
+    <td><%= link_to 'Show', ingredient_path %></td>
     <td><%= link_to 'Edit', edit_ingredient_path(ingredient) %></td>
     <td><%= link_to 'Delete', ingredient, method: :delete, data: { confirm: 'Are you sure you would like to delete this??' } %></td>
   </tr>
