--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -1,12 +1,26 @@
 <h2>Here is your recipe page! Keep on cooking and creating! </h2>
 
-<% @recipes.each do |recipe|  %>
+<table>
+  <tr>
+    <th>Name:</th>
+    <th>Instructions:</th>
+    <th></th>
+    <th></th>
+    <th></th>
+  </tr>
 
-  <%= recipe.title %> |
-  <%= link_to "Show", recipe %> |
-  <%= link_to "Edit", recipe %>
+
+<% @recipes.each do |recipe|  %>
+  <tr>
+    <td><%= recipe.name %></td>
+    <td><%= recipe.instructions %></td>
+    <td><%= link_to "Show", recipe %></td>
+    <td><%= link_to "Edit", edit_recipe_path(recipe) %></td>
+    <td><%= link_to "Destroy", recipe, method: :delete, data: { confirm: "Are you absolutely certain?" }%></td>
+  </tr>
 
 <% end %>
+</table>
 
 <br>
 
