--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -1,1 +1,16 @@
-<%= render 'form' %>
+<p>
+  <strong>Ingredients:</strong>
+  <ul>
+    <% @recipe.ingredients.each do |ingredient| %>
+    <li><%= link_to ingredient.name, ingredient %></li>
+    <% end %>
+  </ul>
+</p>
+
+<p>
+  <strong>Instructions:</strong>
+  <%= @recipe.instructions %>
+</p>
+
+<%= link_to "Edit", edit_recipe_path(@recipe) %>
+<%= link_to "Back", recipes_path %>
