updating css and view forms

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -9,7 +9,7 @@
     line-height: 18px;
     margin: 33px;
     padding: 0;
-    background: transparent url("https://images.unsplash.com/photo-1498654896293-37aacf113fd9?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=c5d544bcd4ed70a95394185b2340f9ab&auto=format&fit=crop&w=1500&q=80") no-repeat center;
+    background: transparent url("https://images.unsplash.com/photo-1526383426426-c1716158d22a?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=47073ff65a699587798a886d0f7fe1ed&auto=format&fit=crop&w=1350&q=80") no-repeat center;
     background-size: cover;
     min-height: 100vh;
   }
@@ -69,7 +69,7 @@
   }
 
   a {
-    color: #8AE3E3;
+    color: #2E16B5;
 
     &:visited {
     color: #AD3434;
@@ -80,3 +80,5 @@
     background-color: #000;
     }
   }
+
+  
