--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -1,4 +1,4 @@
-<h2>Here is your recipe page! Keep on cooking and creating! </h2>
+<h2>Welcome to your recipe page! Keep on cooking and creating! </h2>
 
 <table>
   <tr>
@@ -21,7 +21,6 @@
 
 <% end %>
 </table>
-
 <br>
 
   <%= link_to "New Recipe", new_recipe_path %>
