--- a/app/views/home_page/home.html.erb
+++ b/app/views/home_page/home.html.erb
@@ -8,7 +8,7 @@
 
     <div class="center">
       <%= link_to "Sign In", signin_path, class: "btn btn-primary" %> |
-      <%= link_to "Log-in with Facebook", '/auth/facebook/callback', class: "btn btn-primary" %> |
+      <%= link_to "Log-in with Facebook", '/auth/facebook', class: "btn btn-primary" %> |
       <%= link_to "Register", new_culinary_artist_path, class: "btn btn-primary" %>
     </div>
   </div>
