fixing bugs, especially omniauth
Updated links to reflect using github as omniauth

--- a/app/views/home_page/home.html.erb
+++ b/app/views/home_page/home.html.erb
@@ -2,13 +2,13 @@
 
   <div class="content">
     <h1>Welcome to your online journal of recipes!</h1>
-    <p>To cook, create and enjoy! Here at my recipe you can share your favorite
+    <p>To cook, create and enjoy! Here you can share your favorite
       recipes with your family and friends. </p>
   </div>
 
     <div class="center">
       <%= link_to "Sign In", signin_path, class: "btn btn-primary" %> |
-      <%= link_to "Log-in with Facebook", '/auth/facebook/callback', class: "btn btn-primary" %> |
+      <%= link_to "Log-in with Github", '/auth/github', class: "btn btn-primary" %> |
       <%= link_to "Register", new_culinary_artist_path, class: "btn btn-primary" %>
     </div>
   </div>
