--- a/app/views/ingredients/show.html.erb
+++ b/app/views/ingredients/show.html.erb
@@ -5,3 +5,4 @@
 
 <%= link_to 'Edit', edit_ingredient_path(@ingredient) %>
 <%= link_to 'Index', ingredients_path %>
+<%= link_to "Log Out", logout_path, method: :destroy, class: "nav-link" %>
