--- a/app/views/recipe_ingredient/show.html.erb
+++ b/app/views/recipe_ingredient/show.html.erb
@@ -10,3 +10,4 @@
 
 <%= link_to "Edit", edit_recipe_ingredient_path(@recipe_ingredient) %>
 <%= link_to "Back", recipe_ingredients_path %>
+<%= link_to "Log Out", logout_path, method: :destroy, class: "nav-link" %>
