--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,8 +1,13 @@
-
+<div>
 <% if current_user %>
 
-	<li class="nav-item"><%= link_to "Ingredients", ingredients_path, class: "nav-link" %></li>
-	<li class="nav-item"><%= link_to "Recipes", recipes_path, class: "nav-link" %></li>
-	<li class="nav-item"><%= link_to "Log Out", logout_path, method: :destroy, class: "nav-link" %></li>
+	<%= link_to "Ingredients", ingredients_path %> |
+	<%= link_to "Recipes", recipes_path %> |
+	<%= link_to "Log Out", logout_path %>
+
+<%else%>
+	<%= link_to "Login", signin_path %>
 
 <% end %>
+
+</div>
