--- a/app/views/ingredients/_form.html.erb
+++ b/app/views/ingredients/_form.html.erb
@@ -8,10 +8,17 @@
           <% end %>
       </ul>
     </div>
+<% end %>
+
+  <div class="field">
+    <%= f.label :name %><br/>
+    <%= f.text_field :name %>
+  </div>
+
 
   <div class="actions">
   <%= f.submit class: "btn btn-primary" %>
  </div>
- <% end %>
+
 
 <% end %>
