--- a/app/views/culinary_artists/show.html.erb
+++ b/app/views/culinary_artists/show.html.erb
@@ -1,3 +1,3 @@
 <h3>Welcome, <% current_user %> here are your recipes: </h3>
 
-<%= link_to "New Recipe", new_recipe_path, class: "btn btn-primary" %>
+<%= link_to "New Recipe", new_culinary_artist_recipe_path, class: "btn btn-primary" %>
