Updating recipe controller and show page
I had to update recipe controller and show page to reflect my nested routes

--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -11,6 +11,7 @@
   <% end %>
 
   <div class="field">
+    <%= f.hidden_field :culinary_artist_id %>
     <%= f.label :title %><br/>
     <%= f.text_field :title %>
   </div>
