--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -1,12 +1,12 @@
-<p>
-  <strong>Title: </strong>
-  <%= @recipe.title %>
-</p>
+
+<h1><%= @recipe.title %></h1>
+<p>by <%= link_to @recipe.culinary_artist.name, culinary_artist_path(@recipe.culinary_artist) if @recipe.culinary_artist %>
 
 <p>
   <strong>Instructions:</strong>
   <%= @recipe.instructions %>
 </p>
+
 <% if current_user %>
   <%= link_to "Edit", edit_recipe_path %>
   <%= link_to "Back", recipes_path %>
