--- a/app/views/culinary_artists/show.html.erb
+++ b/app/views/culinary_artists/show.html.erb
@@ -1,6 +1,6 @@
 <h3>Welcome, <% current_user %> here are your recipes: </h3>
 
-<%= link_to "New Recipe", new_culinary_artist_recipe_path, class: "btn btn-primary" %>
+<%= link_to "New Recipe", new_culinary_artist_recipe_path(current_user), class: "btn btn-primary" %>
 
 <p>Recipes: </p>
   <% @culinary_artist.recipes.each do |recipe| %>
