updating controllers and views
trying to get my nested forms to work properly #nightmare :)

--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -14,7 +14,7 @@
 
   <div class="field">
     <%= f.hidden_field :culinary_artist_id %>
-    <%= f.label :title %><br/>
+    <%= f.label "Title" %><br/>
     <%= f.text_field :title %>
   </div>
 
