--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -47,8 +47,9 @@ table#t01 th {
 
 <br>
 <% if current_user %>
-  <%= link_to "Index", recipes_path %>
-  <%= link_to "Log Out", logout_path, method: :destroy, class: "nav-link" %>
-<% else %>
+  <%= link_to "Index", recipes_path %> |
+  <%= link_to "Log Out", logout_path %> |
   <%= link_to "Something new", new_recipe_path %>
+<% else %>
+  <%= link_to "Homepage", root_path %>  
 <% end %>
