--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -18,9 +18,9 @@
     <%= f.text_field :title %>
   </div>
 
-    <%= f.fields_for :recipe_ingredients, @recipe.recipe_ingredients.build do |f| %>
-    <%= f.label :ingredient %>
-    <%= f.text_field :ingredient %>
+    <%= f.fields_for :recipe_ingredients do |f| %>
+    <%= f.label :ingredient_name %>
+    <%= f.text_field :ingredient_name %>
     <%= f.label :quantity %>
     <%= f.text_field :quantity %>
     <%= f.link_to_remove "Take out this ingredient" %>
