working out bugs

--- a/app/views/ingredients/_form.html.erb
+++ b/app/views/ingredients/_form.html.erb
@@ -11,14 +11,12 @@
 <% end %>
 
   <div class="field">
-    <%= f.label :name %><br/>
-    <%= f.text_field :name %>
+    <%= f.label :ingredient_name %><br/>
+    <%= f.text_field :ingredient_name %>
   </div>
-
 
   <div class="actions">
   <%= f.submit class: "btn btn-primary" %>
  </div>
-
 
 <% end %>
