ingredients can be added and saved

--- a/app/views/ingredients/show.html.erb
+++ b/app/views/ingredients/show.html.erb
@@ -1,6 +1,6 @@
 <p>
     <b>Name:</b>
-    <%= @ingredient.name %>
+    <%= @recipe_ingredient.ingredient_name %>
 </p>
 
 <%= link_to 'Edit', edit_ingredient_path(@ingredient) %>
