--- a/app/views/ingredients/_form.html.erb
+++ b/app/views/ingredients/_form.html.erb
@@ -12,7 +12,7 @@
 
   <div class="field">
     <%= f.label :ingredient_name %><br/>
-    <%= f.text_field :ingredient_name %>
+    <%= f.text_field :name %>
   </div>
 
   <div class="actions">
