updating controllers, models, views
Added code and new route to alphabetize in ascending order the ingredients list

--- a/app/views/ingredients/show.html.erb
+++ b/app/views/ingredients/show.html.erb
@@ -1,6 +1,11 @@
 <p>
     <b>Name:</b>
-    <%= @ingredient.name %>
+    <%=@ingredient.name %>
+
+    <% @ingredient.recipes.each do |list| %>
+        <li> <%= link_to list.title, recipe_path(list) %>
+        </li>
+    <% end %>
 </p>
 
 <%= link_to 'Edit', edit_ingredient_path(@ingredient) %>
